[package]
edition = "2018"
name = "entre-nous"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
sodiumoxide = "^0.2.7"

[dev-dependencies]
criterion = "^0.3.5"
proptest = "^1.0.0"
rand = "^0.8.4"
tempfile = "^3.2.0"

[[bench]]
name = "high_level"
harness = false

[[bench]]
name = "symmetric"
harness = false

[[bench]]
name = "sign"
harness = false
