[package]
edition = "2018"
name = "entre-nous"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
base64 = "^0.13.0"
rand = "^0.8.4"
rocket = { version = "0.5.0-rc.1", optional = true }
serde = { version = "^1.0.0" }
sha2 = "^0.9.8"
sodiumoxide = "^0.2.7"
srp = "^0.5.0"

[dev-dependencies]
criterion = "^0.3.5"
proptest = "^1.0.0"
tempfile = "^3.2.0"

[features]
web = ["rocket", "rocket/json", "rocket/msgpack"]

[[bench]]
name = "high_level"
harness = false

[[bench]]
name = "symmetric"
harness = false

[[bench]]
name = "sign"
harness = false

[[bin]]
name = "server"
required-features = ["web"]
